@@ -6,6 +6,18 @@ This is an abbreviated list of changes. The full/detailed list of changes can be
 * YafaRay Core code: https://github.com/YafaRay/Core/commits/master
 
 
+YafaRay development version (work in progress, not yet released)
+----------------------------------------------------------------
+
+Feature changes/additions:
+--------------------------
+* None yet
+
+Bug fixes:
+----------
+* Bidirectional: fixed transparent background not working, was causing the entire render to have transparent alpha. See: http://www.yafaray.org/community/forum/viewtopic.php?f=15&t=5236
+
+
 
 YafaRay v3.2.0 (2017-03-21)
 ---------------------------
